# linux-mcp-server

./: .codecov.yml  .coderabbit.yaml  .containerignore  .dockerignore  .gitignore  .gitlab-ci.yml  .packit.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.qa  Containerfile.wheelhouse  DEBUGGING.md  Dockerfile  INSTALL.md  LICENSE  MCP_INSPECTOR.md  Makefile  OPENSHIFT.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  SECURITY-AUDIT-REPORT.md  USAGE.md  VERIFICATION_REPORT.md  claude_desktop_config.example.json  deploy-to-openshift.sh  example_config.sh  hatch_build.py  hosts.example.yaml  mkdocs.yml  pyproject.toml  renovate.json  server.json  setup.py
.claude-plugin/: marketplace.json
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: build-and-publish-ghcr.yml  build-publish.yml  ci.yml  ci_installation.yaml  docs.yml  functional-tests.yml  gitlab-trigger.yml  llm-eval.yml
.gitlab/ci/: CREDENTIALS.md  eval-gatekeeper.yml  mirror.yml
.tekton/: integration-lifecycle.yaml  integration-protocol.yaml  linux-mcp-server-pull-request.yaml  linux-mcp-server-push.yaml  pipeline-build-multiarch.yaml  pull_request.yaml  push.yaml  task-get-version.yaml  task-mcp-protocol-audit.yaml  task-verify-container.yaml
deploy/: README.md
deploy/openshift/: deploy.sh
docs/: CONTRIBUTING.md  Debugging.md  INSPECTOR_SETUP_NOTES.md  Install.md  MCP_INSPECTOR.md  OPENSHIFT.md  Usage.md  architecture.md  cheatsheet.md  clients.md  config-reference.md  contributing.md  debugging.md  getting-started.md  guarded-command-execution.md  index.md  install.md  keycloak.md  security.md  shared.md  ssh.md  tools.md  troubleshooting.md  usage.md
docs/api/: audit.md  commands.md  config.md  connection.md  formatters.md  index.md  parsers.md  server.md
docs/examples/: claude_desktop_config.example.json  example_config.sh
eval/gatekeeper/: README.md  extract-from-goose.py  index.html  run-eval-models-corp.sh  run-eval.py  standard-evals.sh  testcase-schema.json  utils.py
mcp-app/: package-lock.json  package.json  run-script-app.html  tailwind.config.js  vite.config.ts
mcp-app/src/: global.css  run-script-app.tsx  types.ts  utils.ts
openshift/: configmap.yaml  deployment.yaml  inspector-deployment.yaml  inspector-proxy-route.yaml  inspector-service.yaml  service.yaml  serviceaccount.yaml
packaging/: constraints.txt  linux-mcp-server.spec
plans/: main.fmf
plugins/claude/: .mcp.json
scripts/: generate_tool_docs.py  linux-mcp-container.sh  mcp_protocol_audit.sh  mirror_github_pr.py  mirror_github_pr.sh  pipeline_utils.py  publish_mcp_registry.py  publish_mcp_registry.sh  report_konflux_status.py  vendor_models_dev_pricing.py  verify_container_integration.sh  verify_container_lifecycle.sh  verify_installation.sh  verify_mcp_handshake.sh  verify_stdout_hygiene.sh
src/linux_mcp_server/: __init__.py  __main__.py  audit.py  auth.py  auth_policy.py  commands.py  config.py  constants.py  data_pipeline.py  execution_context.py  formatters.py  logging_config.py  mcp_app.py  models.py  parsers.py  processing.py  server.py  toolset.py
tests/: __init__.py  conftest.py  test__main__.py  test_audit.py  test_auth.py  test_auth_policy.py  test_cli.py  test_commands.py  test_config.py  test_decorators.py  test_formatters.py  test_logging_config.py  test_mcp_tools.py  test_middleware.py  test_models.py  test_parsers.py  test_processes.py  test_server.py  test_services.py  test_ssh_executor.py  test_storage.py  test_system_info.py  test_tool_schemas.py  test_toolset.py  test_validation.py
(+173 files in other folders)
