[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux-mcp-server"
version = "0.1.0"
description = "MCP server for read-only Linux system administration, diagnostics, and troubleshooting"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "psutil>=5.9.0",
    "asyncssh>=2.14.0",
]

[project.scripts]
linux-mcp-server = "linux_mcp_server.__main__:cli"

[dependency-groups]
dev = [
    "ipdb",
    "ipython",
    {include-group = "lint"},
    {include-group = "test"},
]

lint = [
    "pyright",
    "ruff",
]

test = [
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linux_mcp_server"]

[tool.pytest.ini_options]
addopts = [
    "-r", "a",
    "--verbose",
    "--strict-markers",
    "--cov", "src",
    "--cov-branch",
    "--cov-report", "html",
    "--cov-report", "term-missing:skip-covered",
    "--durations-min", "1",
    "--durations", "10",
    "--color", "yes",
    "--showlocals",
    "--pdbcls", "IPython.terminal.debugger:TerminalPdb",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
concurrency = ["greenlet", "thread"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.gha-update]
tag-only = [
    "actions/checkout",
    "actions/setup-python",
    "astral-sh/setup-uv",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# Enable ruff rules to act like flake8
select = [
    "E",  # pycodestyle (formerly part of flake8)
    "F",  # pyflakes (formerly part of flake8)
    "I",  # import order (like isort)
    # "B",  # flake8-bugbear
    "C90",  # flake8-comprehensions
    "RUF100",  # unused-noqa
    "T20",  # flake8-print
]
mccabe.max-complexity = 12

# Exclude specific rules if needed
ignore = [
    "E501",  # Ignore line length (similar to flake8's max-line-length)
]


[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false
